LinKreta_POC_Repository/force-app/main/default/objects/State__c/fields/Country_code__c.field-meta.xml
<CustomField>
    <fullName>Country_code__c</fullName>
    <label>Country code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>