LinKreta_POC_Repository/force-app/main/default/objects/State__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>State Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>